org.eclipse.jdt.ui.tests.refactoring/resources/InlineMethodWorkspace/TestCases/invalid/Test_issue_1529_2.java
package invalid;

class A {
    public int x;
}

class B extends A {
    void foo() {
        super.x = 8;
    }

    static void err(B b) {
        b./*]*/foo()/*[*/;
    }
}

